--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,26 +5,10 @@
   </head>
   <body>
     <h1>Lasanga</h1>
-    <img src="https://www.allrecipes.com/thmb/GPHLQPv-_8iisXMW4QljZwo1bHA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/PASSANO_ALR_GreenBeans_MushroomSauce_5551_preview-214c31f321bf42b7b129fd2b94482cb6.jpg" alt="green beans with creamy mushroom sauce"/>
-    <p>Delicious easy to make green beans</p>
-    <ul>
-      <li><b>Prep Time:</b> 15 mins</li>
-      <li><b>Cook Time:</b>20 mins</li>
-      <li><b>Total Time:</b>15 mins</li>
-      <li><b>Servings:</b>8</li>
-    </ul>
-    <h3>Ingredients:</h3>
-    <ul>
-      <li>3 tablespoons olive oil, divided</li>
-      <li>1 cup thingly sliced shallot</li>
-      <li>1 pound fresh green beans, trimmed</li>
-      <li>2 tablespoons water</li>
-      <li>1/2 teaspoon kosher salt, divided</li>
-      <li>1/4 teaspoon ground black pepper, divided</li>
-      <li>3 gloves garlic, minced</li>
-      <li>1 tablesppon all-purpose flour</li>
-      <li>1 cup low-fat milk</li>
-      <li>1/2 cup crumbled goats cheese</li>
+      <img src="https://www.allrecipes.com/thmb/iZ6jou5HiJUnLJIM1ApRRuj26Pg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5099691-e33070e2098943a9833a784ff0964f4d.jpg" alt="vegan lasagna">
+      <p><b>Description: </b>Vegan lasagna</p>
+      <p>This vegan lasagna is easy to make and delicious to eat. With a 30 min prep time, 1 hour cook time, you can easily feed 3 people a delicious and nutritious meal. Packed with healthy vegetables, you can adjust the ingredients to suit your taste buds. This recipe comes from all recipes.com</p>
+      <p>This recipe has a 4.2 out of 5 rating, contains 23 grams of protein, 13 grams of fat, and 62 grams of carbs and 427 calories</p>
     </ul>
   </body>
 </html>
