--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,6 +10,7 @@
       <p>This vegan lasagna is easy to make and delicious to eat. With a 30 min prep time, 1 hour cook time, you can easily feed 3 people a delicious and nutritious meal. Packed with healthy vegetables, you can adjust the ingredients to suit your taste buds. This recipe comes from all recipes.com</p>
       <p>This recipe has a 4.2 out of 5 rating, contains 23 grams of protein, 13 grams of fat, and 62 grams of carbs and 427 calories</p>
       <ul>
+        <h3>Ingredients</h3>
         <li>3 cloves garlic, minced</li>
         <li>1/2 pound mushrooms</li>
         <li>1 tablespoon vegetable oil</li>
@@ -21,15 +22,12 @@
         <li>⅔ (16 ounce) package instant lasagna noodles</li>
       </ul>
       <h3>Directions</h3>
-        <p><b>Step 1</b></p>
-        <p>Preheat oven to 375 degrees F (190 degrees C).</p>
-        <p><b>Step 2</b></p>
-        <p>In a large skillet, saute garlic and mushrooms in oil until all the liquid is cooked out. Add 1/3 tomato puree to mushrooms and garlic, cook 2 to 3 minutes, and remove from heat.</p>
-        <p><b>Step 3</b></p>
-        <p>In a microwave-safe bowl, combine spinach, garlic salt, Italian seasoning and tofu. Blend until the mixture is an even consistency. Heat in a microwave on high for 2 minutes.</p>
-        <p><b>Step 4</b></p>
-        <p>In a 9x9 inch baking pan, pour one thin layer of remaining tomato puree, a layer of noodles, 1/2 the tofu mixture, the mushroom sauce, a layer of noodles, 1/2 the tofu mixture, a layer of tomato puree, a layer of noodles, and a final layer of tomato puree.</p>
-        <p><b>Step 5</b></p>
-        <p>Bake 45 minutes in the preheated oven</p>
+       <ol>
+        <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+        <li>In a large skillet, saute garlic and mushrooms in oil until all the liquid is cooked out. Add 1/3 tomato puree to mushrooms and garlic, cook 2 to 3 minutes, and remove from heat.</li>
+        <li>In a microwave-safe bowl, combine spinach, garlic salt, Italian seasoning and tofu. Blend until the mixture is an even consistency. Heat in a microwave on high for 2 minutes.</li>
+        <li>In a 9x9 inch baking pan, pour one thin layer of remaining tomato puree, a layer of noodles, 1/2 the tofu mixture, the mushroom sauce, a layer of noodles, 1/2 the tofu mixture, a layer of tomato puree, a layer of noodles, and a final layer of tomato puree.</li>
+        <li>Bake 45 minutes in the preheated oven</li>
+      </ol>
   </body>
 </html>
