Finished Pesto Pasta Recipe

--- a/recipes/pesto-pasta.html
+++ b/recipes/pesto-pasta.html
@@ -7,27 +7,23 @@
     <h1>Pesto Pasta</h1>
       <img src="https://www.allrecipes.com/thmb/9yM-87rBbN3qbr7QYf_5q4dJQpk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11887_pesto-pasta_Rita-1x1-1-501c953b29074ab193e2b5ad36e64648.jpg" alt="pesto pasta">
       <p><b>Description: </b>Pesto Pasta</p>
-      <p></p>
-      <p></p>
+      <p>This delicious pesto pasta is quick and delicious. Serve up to 10 people in minutes. Expect a prep time of roughly 5 minutes, cooking time of 10 minutes.</p>
+      <p>This recipe contains 225 calories, 7 grams of fat, 32 grams of carbs, and 8 grams of protein.</p>
       <ul>
         <h3>Ingredients</h3>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>1 (16 ounce) package pasta</li>
+        <li>2 tablespoons olive oil</li>
+        <li>½ cup chopped onion</li>
+        <li>2 ½ tablespoons pesto</li>
+        <li>salt to taste</li>
+        <li>ground black pepper to taste</li>
+        <li>2 tablespoons grated Parmesan cheese</li>
       </ul>
-      <h3>Directions</h3>
        <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <h3>Directions</h3>
+        <li>Fill a large pot with lightly salted water and bring to a rolling boil. Stir in pasta and return to a boil. Cook pasta uncovered, stirring occasionally, until tender yet firm to the bite, about 8 to 10 minutes. Drain and transfer into a large bowl.</li>
+        <li>Meanwhile, heat oil in a frying pan over medium-low heat. Add onion; cook and stir until softened, about 3 minutes. Stir in pesto, salt, and pepper until warmed through.</li>
+        <li>Add pesto mixture to hot pasta; stir in grated cheese and toss well to coat.</li>
       </ol>
   </body>
 </html>
