--- a/recipes/new.html
+++ b/recipes/new.html
@@ -7,12 +7,12 @@
     <h1>Pesto Pasta</h1>
       <img src="" alt="">
       <p><b>Description: </b>Pesto Pasta</p>
-      <p></p>
-      <p></p>
+      <p>This delicious pesto pasta is quick and delicious. Serve up to 10 people in minutes. Expect a prep time of roughly 5 minutes, cooking time of 10 minutes.</p>
+      <p>This recipe contains 225 calories, 7 grams of fat, 32 grams of carbs, and 8 grams of protein.</p>
       <ul>
         <h3>Ingredients</h3>
-        <li></li>
-        <li></li>
+        <li>1 (16 ounce) package pasta</li>
+        <li>2 tablespoons olive oil</li>
         <li></li>
         <li></li>
         <li></li>
