Updated links on index page

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
   <body>
     <h1>Odin recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
+  </br>
+    <a href="recipes/pesto-pasta.html">Pesto Pasta</a>
+    </br>
+    <a href="recipes/ginger.html">Homemade Pickled Ginger</a>
   </body>
 </html>
