Updated links on index page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
-  </br>
-    <a href="recipes/pesto-pasta.html">Pesto Pasta</a>
-    </br>
-    <a href="recipes/ginger.html">Homemade Pickled Ginger</a>
+    <ul>
+      <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+      <li> <a href="recipes/pesto-pasta.html">Pesto Pasta</a></li>
+      <li><a href="recipes/ginger.html">Homemade Pickled Ginger</a></li>
+    </ul>
   </body>
 </html>
