Added style to Lasanga recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,15 +2,19 @@
 <html lan="en">
   <head>
     <title>Lasanga</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <h1>Lasanga</h1>
+    <h1>Vegan Lasanga</h1>
+    <div class="img-container">
       <img src="https://www.allrecipes.com/thmb/iZ6jou5HiJUnLJIM1ApRRuj26Pg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5099691-e33070e2098943a9833a784ff0964f4d.jpg" alt="vegan lasagna">
-      <p><b>Description: </b>Vegan lasagna</p>
+    </div>  
+      <h3>Description:</h3>
       <p>This vegan lasagna is easy to make and delicious to eat. With a 30 min prep time, 1 hour cook time, you can easily feed 3 people a delicious and nutritious meal. Packed with healthy vegetables, you can adjust the ingredients to suit your taste buds. This recipe comes from all recipes.com</p>
       <p>This recipe has a 4.2 out of 5 rating, contains 23 grams of protein, 13 grams of fat, and 62 grams of carbs and 427 calories</p>
-      <ul>
-        <h3>Ingredients</h3>
+   
+      <ul class="ingredients">
+        <h4>Ingredients</h4>
         <li>3 cloves garlic, minced</li>
         <li>1/2 pound mushrooms</li>
         <li>1 tablespoon vegetable oil</li>
