--- a/recipes/pesto-pasta.html
+++ b/recipes/pesto-pasta.html
@@ -2,15 +2,18 @@
 <html lan="en">
   <head>
     <title>Pesto Pasta</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
     <h1>Pesto Pasta</h1>
+    <div class="img-container">
       <img src="https://www.allrecipes.com/thmb/9yM-87rBbN3qbr7QYf_5q4dJQpk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11887_pesto-pasta_Rita-1x1-1-501c953b29074ab193e2b5ad36e64648.jpg" alt="pesto pasta">
-      <p><b>Description: </b>Pesto Pasta</p>
+    </div>  
+      <h3>Description:</h3>
       <p>This delicious pesto pasta is quick and delicious. Serve up to 10 people in minutes. Expect a prep time of roughly 5 minutes, cooking time of 10 minutes.</p>
       <p>This recipe contains 225 calories, 7 grams of fat, 32 grams of carbs, and 8 grams of protein.</p>
-      <ul>
-        <h3>Ingredients</h3>
+      <ul class="ingredients">
+        <h4>Ingredients</h4>
         <li>1 (16 ounce) package pasta</li>
         <li>2 tablespoons olive oil</li>
         <li>½ cup chopped onion</li>
@@ -19,11 +22,12 @@
         <li>ground black pepper to taste</li>
         <li>2 tablespoons grated Parmesan cheese</li>
       </ul>
+      <h3>Directions</h3>
        <ol>
-        <h3>Directions</h3>
         <li>Fill a large pot with lightly salted water and bring to a rolling boil. Stir in pasta and return to a boil. Cook pasta uncovered, stirring occasionally, until tender yet firm to the bite, about 8 to 10 minutes. Drain and transfer into a large bowl.</li>
         <li>Meanwhile, heat oil in a frying pan over medium-low heat. Add onion; cook and stir until softened, about 3 minutes. Stir in pesto, salt, and pepper until warmed through.</li>
         <li>Add pesto mixture to hot pasta; stir in grated cheese and toss well to coat.</li>
       </ol>
+      <a href="../index.html">Click here to go to Home</a>
   </body>
 </html>
