Added css to ingredients

--- a/recipes/ginger.html
+++ b/recipes/ginger.html
@@ -2,15 +2,18 @@
 <html lan="en">
   <head>
     <title>Homemade pickled ginger gari</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
     <h1>Homemade Pickled Ginger Gari</h1>
+    <div class="img-container">
       <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4556915.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Home made ginger">
-      <p><b>Description: </b></p>
+    </div>  
+      <h3>Description:</h3>
       <p>Pickled ginger is called gari or amazu shoga in Japanese. It's served with sushi or sashimi and helps enhance the flavors and clear your taste buds. It's also great with Century Eggs, a Chinese delicacy. You can find prepared pickled ginger in pink or white at most Asian markets but I prefer to make my own and share with family and friends.</p>
       <p>This dish takes 40 minutes to prepare, 5 minutes to cook, serves 32 and yields 1/2 cups of pickled ginger. It contains only 14 calories, 0 grams of fat, 3 grams of carbs and 0 grams of protein.</p>
-      <ul>
-        <h3>Ingredients</h3>
+      <h3>Ingredients</h3>
+      <ul class="ingredients">
         <li>8 ounces fresh young ginger root, peeled</li>
         <li>1 ½ teaspoons sea salt</li>
         <li>1 cup rice vinegar</li>
@@ -25,6 +28,6 @@
       </ol>
       <h3>Tips</h3>
       <p>As mentioned in the recipe, you may notice your liquid and/or ginger taking on a slightly pinkish color. This is caused by a reaction between the ginger and the rice wine vinegar and is nothing to be alarmed by. Some commercial pickled ginger has red coloring added to get the same familiar pink look. For safety when canning and preserving foods, contact your local extension for guidelines in your area that will be specific to your altitude.</p>
-      <a href="../index.html">Home</a>
+      <a href="../index.html">Click here to go to Home</a>
     </body>
 </html>
