--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -33,5 +33,6 @@
         <li>In a 9x9 inch baking pan, pour one thin layer of remaining tomato puree, a layer of noodles, 1/2 the tofu mixture, the mushroom sauce, a layer of noodles, 1/2 the tofu mixture, a layer of tomato puree, a layer of noodles, and a final layer of tomato puree.</li>
         <li>Bake 45 minutes in the preheated oven</li>
       </ol>
+      <a href="../index.html">Click here to go to Home</a>
   </body>
 </html>
